--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^15.4.1",
     "react-addons-pure-render-mixin": "^15.4.1",
     "react-dom": "^15.4.1",
-    "react-meteor-data": "^0.2.9"
+    "react-meteor-data": "^0.2.9",
+    "react-router": "^3.0.0"
   }
 }
