--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "meteor-node-stubs": "~0.2.0",
     "react": "^15.4.1",
     "react-addons-pure-render-mixin": "^15.4.1",
+    "react-codemirror": "^0.3.0",
     "react-dom": "^15.4.1",
     "react-meteor-data": "^0.2.9",
     "react-router": "^3.0.0"
